Fixed accordion icons caption and alignment

--- a/src/components/ideapanelaccordion/IdeaPanelAccordion.module.scss
+++ b/src/components/ideapanelaccordion/IdeaPanelAccordion.module.scss
@@ -37,6 +37,7 @@
 
         .panelItem {
             display: flex;
+            align-items: center;
             flex-direction: column;
             padding-right: 2.625rem;
 
@@ -47,7 +48,6 @@
             .stats {
                 font-family: 'tex-regular';
                 font-size: 1rem;
-                text-align: center;
                 margin-top: 0.2rem;
 
                 @media screen and (max-width: 768px) {
